:recycle: Use meaningful style name

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -286,6 +286,22 @@
   }
 }
 
+.label-pending {
+  background-color: $brand-info;
+}
+
+.label-success {
+  background-color: $brand-success;
+}
+
+.label-danger {
+  background-color: $brand-danger;
+}
+
+.label-retrieved {
+  background-color: $gray-light;
+}
+
 // Sign in
 
 .form-signin {
