:bug: Fix style name for approved

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -290,11 +290,11 @@
   background-color: $brand-info;
 }
 
-.label-success {
+.label-approved {
   background-color: $brand-success;
 }
 
-.label-danger {
+.label-rejected {
   background-color: $brand-danger;
 }
 
