--- a/app/views/expenses/new.html.haml
+++ b/app/views/expenses/new.html.haml
@@ -12,4 +12,4 @@
         = f.input :amount, label: "金額"
         = f.input :category, label: "勘定項目"
       .form-actions
-        = f.button :submit, "申請する", class: "btn-lg btn-primary"
+        = f.button :submit, "申請する", class: "btn btn-block btn-primary"
