--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -463,11 +463,11 @@ body.devise {
     display: block;
     float: left;
     cursor: pointer;
-    width: 500px;
-    margin: 0;
-    padding: 10px;
-    background: #bdc3c7;
-    color: #869198;
+    width: 100%;
+    height: 200px;
+    padding-top: 92px;
+    background: $gray-lighter;
+    color: $gray-dark;
     font-size: 16px;
     text-align: center;
     line-height: 1;
@@ -475,20 +475,30 @@ body.devise {
   }
 
   label:first-of-type{
-    border-radius: 3px 0 0 3px;
+    border-radius: 30px;
   }
 
   label:last-of-type{
-    border-radius: 0 3px 3px 0;
+    border-radius: 30px;
   }
 
-  input[type="radio"]:checked + .switch-on {
+  input[type="radio"]:checked + .approved {
     background-color: $brand-success;
     color: #fff;
   }
 
-  input[type="radio"]:checked + .switch-off {
+  input[type="radio"]:checked + .rejected {
     background-color: $brand-danger;
     color: #fff;
+  }
+}
+
+.expense-comment {
+  .says {
+    padding: 30px;
+  }
+
+  .text {
+    width: 900px;
   }
 }
