--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,10 +1,18 @@
-%h2 Forgot your password?
-= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .actions
-    = f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+%h1.text-center
+  = image_tag "logo.png", class: "logo"
+%div.container.login
+  %div.panel.panel-default
+    %div.panel-body
+      %div.form-vertical
+      %div.page-header
+        パスワードを忘れてしまいましたか？
+      = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
+        = devise_error_messages!
+        %div.form-group
+          = f.label :email, "メールアドレス"
+          %br/
+          = f.email_field :email, autofocus: true, class: "form-control"
+        .actions
+          = f.submit "パスワード変更手続きのメールを送る", class: "btn btn-block btn-primary"
+  = render "devise/shared/links"
+  = link_to "Logo from LogoMakr.com", "http://logomakr.com"
