:art: Add badge for pending

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,11 @@
                   - if current_user.admin?
                     %li= link_to "今月の経費情報", pages_show_path
                   %li= link_to "経費申請する", new_expense_path
-                  %li= link_to "経費一覧", expenses_path(status: :pending)
+                  %li
+                    = link_to expenses_path(status: :pending) do
+                      経費一覧
+                      - if current_user.admin? && current_user.company.expenses.pending.count > 0
+                        %span.badge= current_user.company.expenses.pending.count
                   %li= link_to "プロフィール", edit_user_registration_path
                   %li= link_to "ログアウト", destroy_user_session_path, method: :delete
                 - else
