:art: Fix purose view
一覧では表示しないように
詳細画面では改行しつつ表示するように

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -13,7 +13,7 @@
               %h3
                 = expense.title
                 %small= expense.user.name
-              %p= expense.purpose
+              %p= simple_format(expense.purpose)
               %p
                 = "#{expense.paid_at.strftime("%Y年%m月%d日")}に#{expense.paid_to}に支払われました。"
               %p
