:jp: Remove devise message for unauthenticated

--- a/app/views/layouts/_alert_message.html.haml
+++ b/app/views/layouts/_alert_message.html.haml
@@ -1,4 +1,5 @@
 - flash.each do |type, message|
   - type = "info" if type == "notice"
   - type = "danger" if type == "alert"
-  %div{class: "alert alert-#{type}"}= message
+  - if message.present?
+    %div{class: "alert alert-#{type}"}= message
