--- a/app/views/expenses/new.html.haml
+++ b/app/views/expenses/new.html.haml
@@ -11,5 +11,6 @@
         = f.input :paid_to, label: "支払先"
         = f.input :amount, label: "金額"
         = f.input :category, label: "勘定項目"
+        = f.input :remark, label: "その他(詳細)"
       .form-actions
         = f.button :submit, "申請する", class: "btn btn-block btn-primary"
