--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -27,7 +27,7 @@
                 %span.glyphicon.glyphicon-tags
                 = expense.category_i18n
                 - if expense.category10?
-                  = expense.remark
+                  = expense.category_other_detail
             %div.col-md-4
               %div.price
                 %span.glyphicon.glyphicon-yen
